--- a/src/main/resources/static/Resource/css/Base/style.css
+++ b/src/main/resources/static/Resource/css/Base/style.css
@@ -71,9 +71,9 @@ input:focus, textarea:focus {
 .example3{ width:20%; height:250px; margin:6px; background: url(bg-01.png) 0% 0% / 100% 100% no-repeat; float:left; }
 
 .example-title{ color:#fff; font-size:14px; padding-top:12px; padding-left:18px;}
-.order{ position:absolute; left:30%;margin-top: 5%;}
+.order{ position:absolute;top:1%;;left:15px;}
 .order-title{ font-size:12px; color:#fff; margin-bottom:8px;}
-.order ul li{ float:left; margin-right:1px;font-family: "Segoe Print"; font-size:18px; font-weight:600; color:#fff; background-color:#269457;padding:2px 4px; border-radius:2px; border:1px solid #14386f;}
+.order ul li{ float:left; margin-right:1px;font-family: "Segoe Print"; font-size:18px; font-weight:600; color: rgba(16, 11, 19, 0.99); background-color: #ffd435;padding:2px 4px; border-radius:2px; border:1px solid #ffd435;}
 
 
 
