--- a/src/main/resources/static/Resource/js/jqueryUI/theme/jqgridLightBlue/jquery-ui-1.10.4.custom.css
+++ b/src/main/resources/static/Resource/js/jqueryUI/theme/jqgridLightBlue/jquery-ui-1.10.4.custom.css
@@ -158,7 +158,7 @@
 .ui-selectable-helper {
 	position: absolute;
 	z-index: 100;
-	border: 1px dotted black;
+	border: 1px solid black;
 }
 .ui-accordion .ui-accordion-header {
 	display: block;
@@ -799,7 +799,7 @@ body .ui-tooltip {
 	font-size: 1em;
 }
 .ui-widget-content {
-	border: 1px dotted #95B8E7;
+	border: 1px solid #EBEEF5;
 	/* 	background: #EBEFF3; */
 	color: #222222;
 }
@@ -807,7 +807,7 @@ body .ui-tooltip {
 	color: #222222;
 }
 .ui-widget-header {
-	border: 1px dotted #95B8E7;
+	border: 1px solid #EBEEF5;
 	background: #EBEFF3;
 	color: #0E2D5F;
 	font-weight: bold;
@@ -821,9 +821,9 @@ body .ui-tooltip {
 .ui-state-default,
 .ui-widget-content .ui-state-default,
 .ui-widget-header .ui-state-default {
-	border: 1px dotted #c5dbec;
-	background: #EBEFF3;
-	font-weight: normal;
+	border: 1px solid #EBEEF5;
+	background: #fafafa;
+	font-weight: bold;
 	color: #222222;
 }
 .ui-state-default a,
@@ -872,7 +872,7 @@ body .ui-tooltip {
 .ui-state-highlight,
 .ui-widget-content .ui-state-highlight,
 .ui-widget-header .ui-state-highlight {
-	background: #ffe48d;
+	background: #8fdbca;
 	color: #363636;
 }
 .ui-state-highlight a,
