--- a/src/main/resources/static/View/SysInfo/SysDictionary.html
+++ b/src/main/resources/static/View/SysInfo/SysDictionary.html
@@ -211,10 +211,8 @@
 
         if (errorMessage.length != "") {
             errorNotification({
-                SimpleMessage: $.i18n.prop('SysDictionary_invalid'),
-                MoreMessage: errorMessage
+                SimpleMessage : errorMessage
             });
-
             return false;
         }
 
