--- a/src/main/resources/static/View/cpgl/In_Come_Detail.html
+++ b/src/main/resources/static/View/cpgl/In_Come_Detail.html
@@ -12,7 +12,7 @@
 <body style="overflow:hidden">
 	<div id="toolbar" class="easyui-panel" style="padding: 4px; border-width:0; border-bottom-width:1px;">
 		<a href="javascript:save();" id="save" class="easyui-linkbutton" style="display: inline-block;" plain="true" iconcls="icon-save">保存</a>
-		<a href="javascript:close();" id="close" class="easyui-linkbutton" style="display:inline-block;" plain="true" iconcls="icon-cancel"> 关闭</a>
+		<a href="javascript:close();" id="close" class="easyui-linkbutton" style="display:inline-block;" plain="true" iconcls="icon-js_remove"> 关闭</a>
 	</div>
     <form id="addForm" class="easyui-form" method="post" enctype="multipart/form-data">
     <input type="hidden" id="id" name="id" />
@@ -62,13 +62,6 @@
 			</tr>
 		</table>
 </form>
-<input id = "snValue" type="hidden" />
-
-	<div id="gridControl">
-		<table id="gridTable"></table>
-	</div>
-	<div id="gridPager">
-	</div>
 </body>
 <script type="text/javascript" src="../../Resource/js/jquery-2.0.0.min.js"></script>
 <script type="text/javascript" src="../../Resource/js/jquery.i18n.properties.js"></script>
